--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -27,6 +27,8 @@ env:
   RECIPE_NAME: ${{ github.event.inputs.name }}
   RECIPE_DESCRIPTION: ${{ github.event.inputs.description }}
   RECIPE_STEPS: ${{ github.event.inputs.steps }}
+  USERNAME: ${{ github.event.inputs.username }}
+  USER_SECRET: ${{ github.event.inputs.user_secret }}
 
 jobs:
   create-recipe:
@@ -41,4 +43,38 @@ jobs:
           echo "Recipe description: $RECIPE_DESCRIPTION"
           echo "Number of steps: $RECIPE_STEPS"
           echo "Username: $USERNAME"
-          echo "User secret: $USER_SECRET"
+
+      - name: Create a unique string
+        run: |
+          USER_ID=$(echo -n "$USERNAME$USER_SECRET" | md5sum | cut -d' ' -f1)
+          echo "Secret: $USER_ID"
+          echo "USER_ID=$USER_ID" >> $GITHUB_ENV
+
+      - name: Register User
+        run: |
+          URL_SAFE_USERNAME=$(echo "$USERNAME" | tr '[:upper:]' '[:lower:]' | tr -cd '[:alnum:]_\-\.' | tr -s '_' | sed 's/ /_/g')
+          echo "$USER_ID" > $URL_SAFE_USERNAME
+          mkdir -p users/$USER_ID
+          echo "$URL_SAFE_USERNAME" > users/$USER_ID/name
+
+      - name: Create recipe
+        run: |
+          mkdir -p recipes/$USER_ID/recipes
+          URL_SAFE_RECIPE_NAME=$(echo "$RECIPE_NAME" | tr '[:upper:]' '[:lower:]' | tr -cd '[:alnum:]_\-\.' | tr -s '_' | sed 's/ /_/g')
+          echo "# $RECIPE_NAME
+          ### $RECIPE_DESCRIPTION
+
+          Steps:
+          $RECIPE_STEPS
+          " > recipes/$USER_ID/recipes/$URL_SAFE_RECIPE_NAME.md
+
+      - name: Update user's recipe index
+        run: |
+          echo "$URL_SAFE_RECIPE_NAME" >> users/$USER_ID/recipes/index.list
+
+      - name: Commit changes
+        run: |
+          git config user.name "$USERNAME"
+          git config user.email "$USERNAME@$USER_ID"
+          git add .
+          git commit -m "Added $RECIPE_NAME for $USERNAME"
