--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -59,22 +59,20 @@ jobs:
 
       - name: Create recipe
         run: |
-          mkdir -p recipes/$USER_ID/recipes
+          mkdir -p recipes/$USER_ID
           URL_SAFE_RECIPE_NAME=$(echo "$RECIPE_NAME" | tr '[:upper:]' '[:lower:]' | tr -cd '[:alnum:]_\-\.' | tr -s '_' | sed 's/ /_/g')
           echo "# $RECIPE_NAME
           ### $RECIPE_DESCRIPTION
 
           Steps:
           $RECIPE_STEPS
-          " > recipes/$USER_ID/recipes/$URL_SAFE_RECIPE_NAME.md
+          " > recipes/$USER_ID/$URL_SAFE_RECIPE_NAME.md
 
-      - name: Update user's recipe index
-        run: |
-          echo "$URL_SAFE_RECIPE_NAME" >> users/$USER_ID/recipes/index.list
+          # list all markdown files in the recipes directory
+          ls recipes/$USER_ID | sed 's/\.md$//' | tr '\n' ' ' > recipes/$USER_ID/index.list
 
       - name: Commit changes
         run: |
-          git config user.name "$USERNAME"
-          git config user.email "$USERNAME@$USER_ID"
-          git add .
-          git commit -m "Added $RECIPE_NAME for $USERNAME"
+          ls recipes/$USER_ID
+          cat recipes/$USER_ID/index.list
+          cat users/$USER_ID/name
