--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -1,4 +1,5 @@
 name: Create Recipe
+
 on:
   workflow_dispatch:
     inputs:
@@ -29,6 +30,10 @@ env:
   RECIPE_STEPS: ${{ github.event.inputs.steps }}
   USERNAME: ${{ github.event.inputs.username }}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.inputs.name }}
+  cancel-in-progress: false
+
 permissions:
   contents: write
 
@@ -49,7 +54,7 @@ jobs:
 
       - name: Create a unique string
         run: |
-          USER_ID=$(echo -n "$USERNAME${{ github.event.inputs.user_secret }}" | md5sum | cut -d' ' -f1)
+          USER_ID=$(echo -n "$USERNAME${{ github.event.inputs.user_secret }}" | sha256sum | cut -d' ' -f1)
           echo "Secret: $USER_ID"
           echo "USER_ID=$USER_ID" >> $GITHUB_ENV
 
