--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -71,12 +71,11 @@ jobs:
           echo "# $RECIPE_NAME
           ### $RECIPE_DESCRIPTION
 
-          Steps:
           $RECIPE_STEPS
           " > recipes/$USER_ID/$URL_SAFE_RECIPE_NAME.md
 
           # list all markdown files in the recipes directory
-          ls -I "*.list" | sort  > recipes/$USER_ID/index.list
+          ls -I "*.list" recipes/$USER_ID | sort  > recipes/$USER_ID/index.list
 
       - name: Commit changes
         continue-on-error: true
