--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -24,12 +24,6 @@ on:
         required: true
         type: string
 
-env:
-  RECIPE_NAME: ${{ github.event.inputs.name }}
-  RECIPE_DESCRIPTION: ${{ github.event.inputs.description }}
-  RECIPE_STEPS: ${{ github.event.inputs.steps }}
-  USER_NAME: ${{ github.event.inputs.username }}
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.inputs.name }}
   cancel-in-progress: false
@@ -41,20 +35,21 @@ jobs:
   create-recipe:
     name: Create Recipe
     runs-on: ubuntu-latest
+    env:
+      RECIPE_NAME: ${{ github.event.inputs.name }}
+      RECIPE_DESCRIPTION: ${{ github.event.inputs.description }}
+      RECIPE_STEPS: ${{ github.event.inputs.steps }}
+      USER_NAME: ${{ github.event.inputs.username }}
+      USER_SECRET: ${{ github.event.inputs.user_secret }}
     steps:
+      - run: echo "::add-mask::$USER_SECRET"
+
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Echo inputs
-        run: |
-          echo "Recipe name: $RECIPE_NAME"
-          echo "Recipe description: $RECIPE_DESCRIPTION"
-          echo "Number of steps: $RECIPE_STEPS"
-          echo "Username: $USER_NAME"
-
       - name: Create a unique string
         run: |
-          USER_ID=$(echo -n "$USER_NAME ${{ github.event.inputs.user_secret }}" | sha256sum | cut -d' ' -f1)
+          USER_ID=$(echo -n "$USER_NAME $USER_SECRET" | sha256sum | cut -d' ' -f1)
           echo "Secret: $USER_ID"
           echo "USER_ID=$USER_ID" >> $GITHUB_ENV
 
