--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -40,17 +40,15 @@ jobs:
       RECIPE_DESCRIPTION: ${{ github.event.inputs.description }}
       RECIPE_STEPS: ${{ github.event.inputs.steps }}
       USER_NAME: ${{ github.event.inputs.username }}
-      USER_SECRET: ${{ github.event.inputs.user_secret }}
     steps:
-      - run: echo "::add-mask::$USER_SECRET"
+      - run: echo "::add-mask::${{ github.event.inputs.user_secret }}"
 
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Create a unique string
         run: |
-          USER_ID=$(echo -n "$USER_NAME $USER_SECRET" | sha256sum | cut -d' ' -f1)
-          echo "Secret: $USER_ID"
+          USER_ID=$(echo -n "$USER_NAME ${{ github.event.inputs.user_secret }}" | sha256sum | cut -d' ' -f1)
           echo "USER_ID=$USER_ID" >> $GITHUB_ENV
 
       - name: Register User
