--- a/.github/workflows/create_recipe.yaml
+++ b/.github/workflows/create_recipe.yaml
@@ -7,10 +7,6 @@ on:
         description: 'Recipe name'
         required: true
         type: string
-      description:
-        description: 'Recipe description'
-        required: true
-        type: string
       steps:
         description: 'Number of steps'
         required: true
@@ -37,7 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RECIPE_NAME: ${{ github.event.inputs.name }}
-      RECIPE_DESCRIPTION: ${{ github.event.inputs.description }}
       RECIPE_STEPS: ${{ github.event.inputs.steps }}
       USER_NAME: ${{ github.event.inputs.username }}
 
@@ -64,10 +59,8 @@ jobs:
           mkdir -p recipes/$USER_ID
           URL_SAFE_RECIPE_NAME=$(echo "$RECIPE_NAME" | tr '[:upper:]' '[:lower:]' | tr -cd '[:alnum:]_\-\.' | tr -s '_' | sed 's/ /_/g')
           echo "# $RECIPE_NAME
-          ### $RECIPE_DESCRIPTION
 
-          $RECIPE_STEPS
-          " > recipes/$USER_ID/$URL_SAFE_RECIPE_NAME.md
+          $RECIPE_STEPS" > recipes/$USER_ID/$URL_SAFE_RECIPE_NAME.md
 
           # list all markdown files in the recipes directory
           ls -I "*.list" recipes/$USER_ID | sort  > recipes/$USER_ID/index.list
